--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.25.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.25.jar
+file.reference.sqlite-jdbc-3.36.0.jar=src/bd/conector jdbc SQLite/sqlite-jdbc-3.36.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.25.jar}
+    ${file.reference.mysql-connector-java-8.0.25.jar}:\
+    ${file.reference.sqlite-jdbc-3.36.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
